--- a/nks-website.html
+++ b/nks-website.html
@@ -829,37 +829,37 @@
         </div>
         <div class="gallery-grid">
             <div class="gallery-item">
-                <img src="C:\Users\Reception-02\Desktop\New folder\Graduation day.jpeg" alt="Graduation ceremony">
+                <img src="https://github.com/BlessingMokoena/NKS-Solutions/blob/main/Graduation%20day.jpeg?raw=true" alt="Graduation ceremony">
                 <div class="gallery-overlay">
                     <span style="color: white; font-size: 1.5rem; font-weight: bold;">Graduation Day</span>
                 </div>
             </div>
             <div class="gallery-item">
-                <img src="C:\Users\Reception-02\Desktop\New folder\Success Stories.jpeg" alt="Graduate portrait">
+                <img src="https://github.com/BlessingMokoena/NKS-Solutions/blob/main/Success%20Stories.jpeg?raw=true" alt="Graduate portrait">
                 <div class="gallery-overlay">
                     <span style="color: white; font-size: 1.5rem; font-weight: bold;">Success Stories</span>
                 </div>
             </div>
             <div class="gallery-item">
-                <img src="C:\Users\Reception-02\Desktop\New folder\Excellence Recognized.jpeg" alt="Award ceremony">
+                <img src="https://github.com/BlessingMokoena/NKS-Solutions/blob/main/Excellence%20Recognized.jpeg?raw=true" alt="Award ceremony">
                 <div class="gallery-overlay">
                     <span style="color: white; font-size: 1.5rem; font-weight: bold;">Excellence Recognized</span>
                 </div>
             </div>
             <div class="gallery-item">
-                <img src="C:\Users\Reception-02\Desktop\New folder\Community Impact.jpeg" alt="Community outreach">
+                <img src="https://github.com/BlessingMokoena/NKS-Solutions/blob/main/Community%20Impact.jpeg?raw=true" alt="Community outreach">
                 <div class="gallery-overlay">
                     <span style="color: white; font-size: 1.5rem; font-weight: bold;">Community Impact</span>
                 </div>
             </div>
             <div class="gallery-item">
-                <img src="C:\Users\Reception-02\Desktop\New folder\Learning Together.jpeg" alt="Training session">
+                <img src="https://github.com/BlessingMokoena/NKS-Solutions/blob/main/Learning%20Together.jpeg?raw=true" alt="Training session">
                 <div class="gallery-overlay">
                     <span style="color: white; font-size: 1.5rem; font-weight: bold;">Learning Together</span>
                 </div>
             </div>
             <div class="gallery-item">
-                <img src="C:\Users\Reception-02\Desktop\New folder\Youth Empowerment.jpeg" alt="Youth program">
+                <img src="https://github.com/BlessingMokoena/NKS-Solutions/blob/main/Youth%20Empowerment.jpeg?raw=true" alt="Youth program">
                 <div class="gallery-overlay">
                     <span style="color: white; font-size: 1.5rem; font-weight: bold;">Youth Empowerment</span>
                 </div>
