Update image sources in index.html

--- a/index.html
+++ b/index.html
@@ -847,19 +847,19 @@
                 </div>
             </div>
             <div class="gallery-item">
-                <img src="https://github.com/BlessingMokoena/NKS-Solutions/blob/main/Community%20Impact.jpeg?raw=true" alt="Community outreach">
+                <img src="https://github.com/BlessingMokoena/NKS-Solutions/blob/main/Commuity%20impact.jpg?raw=true" alt="Community outreach">
                 <div class="gallery-overlay">
                     <span style="color: white; font-size: 1.5rem; font-weight: bold;">Community Impact</span>
                 </div>
             </div>
             <div class="gallery-item">
-                <img src="https://github.com/BlessingMokoena/NKS-Solutions/blob/main/Learning%20Together.jpeg?raw=true" alt="Training session">
+                <img src="https://github.com/BlessingMokoena/NKS-Solutions/blob/main/Learning%20Together.jpg?raw=true" alt="Training session">
                 <div class="gallery-overlay">
                     <span style="color: white; font-size: 1.5rem; font-weight: bold;">Learning Together</span>
                 </div>
             </div>
             <div class="gallery-item">
-                <img src="https://github.com/BlessingMokoena/NKS-Solutions/blob/main/Youth%20Empowerment.jpeg?raw=true" alt="Youth program">
+                <img src="https://github.com/BlessingMokoena/NKS-Solutions/blob/main/Youth%20Impact.jpg?raw=true" alt="Youth program">
                 <div class="gallery-overlay">
                     <span style="color: white; font-size: 1.5rem; font-weight: bold;">Youth Empowerment</span>
                 </div>
